<resources>
    <string name="app_name">ProjectNao</string>
    <string name="pictureNaoView">Picture of a Nao</string>
    <string name="helloIm">Hello I\'m </string>
    <string name="ipOfNaoView">Enter the IP of your Nao</string>
    <string name="helpConnectButton">Help</string>
    <string name="connectButton">Connect</string>
    <string name="openDrawer">open</string>
    <string name="closeDrawer">close</string>
    <string name="naoInfo">Nao Info</string>
    <string name="batteryInfo">Battery Status</string>
    <string name="signalStrength">Signal Strength</string>
    <string name="temperature">Temperature</string>
    <string name="apperance">Apperance</string>

    <string name="titleNaoInfo">Nao Info</string>
    <string name="titleConnectWithNao">Connect With Nao</string>
    <string name="titleConnect">Connect with Nao</string>
    <string name="titleViewConnectionHelp">Connection Help</string>
    <string name="titleActions">Actions</string>
    <string name="titleControll">Controll</string>
    <string name="titleConnectWithPC">Download from PC</string>
    <string name="titleConnectWithServer">Download from Server</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
