<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_connect_with_nao" tools:context="fragments.ConnectWithNaoFragment">

        <android.support.v4.view.ViewPager
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/titleConnect"
            android:id="@+id/titleConnect"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            style="@style/TitleFontDesign"
            android:singleLine="false" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:id="@+id/pictureNaoView"
            android:src="@mipmap/picture_of_nao"
            android:contentDescription="@string/pictureNaoView"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/titleConnect" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ipOfNaoView"
            android:hint="@string/ipOfNaoView"
            android:layout_below="@+id/pictureNaoView"
            android:layout_alignStart="@+id/pictureNaoView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connectButton"
        android:id="@+id/connectButton"
        android:layout_alignTop="@+id/ipOfNaoView"
        android:layout_toEndOf="@+id/ipOfNaoView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helpConnectButton"
        android:id="@+id/helpConnectionButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/helpConnectButton"
        />

</RelativeLayout>
